# python-quickbooks

./: .gitignore  Makefile  pyproject.toml
quickbooks/: client.py
quickbooks/objects/: vendorcredit.py
