[build-system]
requires = ["uv_build>=0.11.4,<0.12"]
build-backend = "uv_build"

[project]
name = "python-quickbooks"
version = "0.9.2"
description = "A Python library for accessing the QuickBooks API."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Edward Emanuel Jr.", email = "edward.emanuel@gmail.com" }]
keywords = ["quickbooks", "qbo", "accounting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "intuit-oauth==1.2.4",
    "rauth>=0.7.3",
    "requests>=2.26.0",
    "simplejson>=3.17.0",
    "six>=1.14.0",
    "python-dateutil",
    "pycparser==2.18",
]

[project.urls]
Homepage = "https://github.com/ej2/python-quickbooks"

[project.scripts]
quickbooks-cli = "quickbooks.tools.cli:cli_execute"

[dependency-groups]
dev = ["flake8", "flake8-pyproject"]

[tool.uv.build-backend]
module-name = "quickbooks"
module-root = ""

[tool.flake8]
max-line-length = 100
max-complexity = 10
filename = "*.py"
format = "default"
exclude = "quickbooks/objects/__init__.py"
